--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,11 @@
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
@@ -36,8 +37,10 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-calendar-heatmap": "^1.10.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
