--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.7",
@@ -21,12 +23,12 @@
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@tailwindcss/vite": "^4.1.3",
     "ace-builds": "^1.39.1",
     "class-variance-authority": "^0.7.1",
@@ -35,10 +37,12 @@
     "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
+    "openai": "^4.94.0",
     "react": "^19.0.0",
     "react-calendar-heatmap": "^1.10.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
