fix: deployable Dockerfile and clean CMD

--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -1,12 +1,21 @@
+# 基础镜像
 FROM python:3.10-slim
 
-# Prevents interactive prompts
-ENV PYTHONUNBUFFERED=1
+# 安装系统依赖（包括 docker CLI 用于 run_user_code）
+RUN apt update && apt install -y docker.io
 
-# Create working directory
+# 设置工作目录
 WORKDIR /app
 
-# Copy the runner script
-COPY run_user_code.py .
+# 复制项目代码（注意：Render 的构建上下文是 backend/docker）
+COPY ../.. .
 
-CMD ["timeout", "5s", "python", "run_user_code.py"]
+# 安装 Python 依赖
+RUN pip install --no-cache-dir -r backend/requirements.txt
+
+# 确保我们有权限运行代码执行器（如使用 docker.sock）
+ENV PYTHONUNBUFFERED=1
+
+# 启动 Django 项目（改成你的实际 settings 模块名）
+CMD ["gunicorn", "interview_plazza.wsgi:application", "--bind", "0.0.0.0:8000"]
+
