--- a/backend/docker/requirements.txt
+++ b/backend/docker/requirements.txt
@@ -17,7 +17,7 @@ python-dotenv==1.0.1
 
 # Storage and Media
 django-storages==1.14.2
-pillow==10.2.0
+
 
 # Dependencies for cryptography
 cffi==1.17.1
@@ -32,3 +32,5 @@ idna==3.10
 charset-normalizer==3.4.1
 certifi==2025.1.31
 urllib3==2.4.0
+
+openai==1.30.1   
