--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,8 @@ python-dotenv==1.0.1
 # Storage and Media
 django-storages==1.14.2
 pillow==10.2.0
+Pillow
+
 
 # Dependencies for cryptography
 cffi==1.17.1
